# n3mc-free

./: .gitignore  CHANGELOG.md  LICENSE  N3MemoryCore_v1.0.0_Free_EN.md  N3MemoryCore_v1.0.0_Free_JP.md  N3MemoryCore_v1.1.0_Free_EN.md  N3MemoryCore_v1.1.0_Free_JP.md  N3MemoryCore_v1.2.0_Free_EN.md  N3MemoryCore_v1.2.0_Free_JP.md  N3MemoryCore_v1.3.1_Free_EN.md  N3MemoryCore_v1.3.1_Free_JP.md  N3MemoryCore_v1.3.2_Free_EN.md  N3MemoryCore_v1.3.2_Free_JP.md  NOTICE  PHILOSOPHY.md  README.md  README_EN.md  README_JP.md  config.json  config.json.example  n3mc_hook.py  n3mc_stop_hook.py  n3memory.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/rules/: n3mc-behavior.md
.github/workflows/: pypi-publish.yml
core/: __init__.py  database.py  processor.py
docs/: manual_smoke_ja.md
memory/: memory_context.md  n3memory.db
n3memorycore/: __init__.py  n3mc_hook.py  n3mc_stop_hook.py  n3memory.py  paths.py
n3memorycore/core/: database.py  processor.py
scripts/: smoke_ja.py
tests/: conftest.py  test_api.py  test_database.py  test_hooks.py  test_hooks_encoding.py  test_processor.py
