[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n3memorycore-free"
version = "1.3.1"
description = "Persistent hybrid-search memory store for Claude Code (Free Edition)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "N3MemoryCore contributors" },
]
keywords = ["claude", "claude-code", "memory", "rag", "embedding", "sqlite-vec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "sentence-transformers>=2.5",
    "sqlite-vec>=0.1.6",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[project.scripts]
n3mc           = "n3memorycore.n3memory:main"
n3mc-hook      = "n3memorycore.n3mc_hook:main"
n3mc-stop-hook = "n3memorycore.n3mc_stop_hook:main"

[project.urls]
Homepage = "https://github.com/NeuralNexusNote/n3mc-free"
Issues   = "https://github.com/NeuralNexusNote/n3mc-free/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["n3memorycore*"]
exclude = ["tests*"]
